--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "typescript-eslint-parser": "^21.0.2"
+  }
 }
