--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
   "name": "jazz-chords",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "private": true,
-  "dependencies": {
-    "@types/jest": "^23.3.12",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "@types/webmidi": "^2.0.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "tonal": "^2.1.2",
-    "typescript": "^3.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+  "workspaces": [
+    "packages/*",
+    "webapp"
   ],
+  "scripts": {
+    "start": "yarn workspace webapp start",
+    "build:packages": "npx tsc -b packages",
+    "build:packages:watch": "npx tsc -b packages --watch"
+  },
   "devDependencies": {
-    "typescript-eslint-parser": "^21.0.2"
+    "lerna": "^3.10.6"
   }
 }
