Some uncheckedin work I found in my working directory. No idea if it works. /shrug

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../tsconfig-base.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -17,7 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "../../packages",
+    "outDir": "build/dist"
   },
   "include": [
     "src"
