--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "build:packages:watch": "npx tsc -b packages --watch"
   },
   "devDependencies": {
-    "lerna": "^3.10.6"
+    "lerna": "^3.10.6",
+    "typescript-eslint-parser": "^22.0.0"
+  },
+  "dependencies": {
+    "@hughrawlinson/midimessage": "file:packages/midimessage",
+    "webapp": "file:webapp"
   }
 }
