--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hughrawlinson/midimessage": "^1.0.0",
+    "@hughrawlinson/midimessage": "file:../packages/midimessage",
     "@types/jest": "^25.1.0",
     "@types/node": "^13.1.0",
     "@types/react": "^16.7.20",
@@ -29,8 +29,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "typescript-eslint-parser": "^22.0.0"
-  }
+  ]
 }
